@@ -1,0 +1,8 @@
+
+
+inout(int) dummy1;
+    
+shared(inout(int)) dummy2;
+
+alias shared(inout(int)) dummy3;
+
