@@ -1,7 +1,6 @@
-
 // not supported in current parser
 
 void func() {
-	//int a = b !in c;
+	int a = b !in c;
 }
 
